[package]
name = "wasm"
version = "0.1.0"
authors = ["gcxfd <i@rmw.link>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc", "panic_hook"]
panic_hook = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.82"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
api = { path = "../api" }
speedy = { path = "../lib/speedy" }
paste = "1.0.7"
js-sys = "0.3.59"
futures = "0.3.21"
wasm-bindgen-futures = "0.4.32"

[dependencies.web-sys]
version = "0.3.59"
features = [
  "BinaryType",
  "console",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.32"
