[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-tungstenite = { version = "0.17.2", features = ["async-std-runtime"] }
tungstenite = "0.17.3"
async-std = { version = "1.12.0", features = ["unstable"] }
log = "0.4.17"
err = { version = "0.0.5", package = "rmw_err" }
net = { path = "../net" }
api = { path = "../api" }
run = { path = "../run" }
anyhow = "1.0.58"
speedy = { path = "../lib/speedy" }
futures = "0.3.21"
